--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "generated-express-app",
-  "version": "0.0.0",
+  "name": "sites",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -13,7 +13,10 @@
     "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
     "jade": "~1.6.0",
-    "stylus": "0.42.3",
-    "marked": "~0.3.2"
+    "stylus": "*",
+    "marked": "~0.3.2",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.9.3",
+    "bootstrap-styl": "*"
   }
 }
