--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.0.0",
     "jade": "~1.6.0",
     "stylus": "*",
+    "nib": "*",
     "marked": "*",
     "express-flash": "^0.0.2",
     "express-session": "^1.9.3",
